[package]
name = "cbl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.114"
thiserror = "1.0.57"
indicatif = "0.17.7"
uuid = { version = "1.7.0", features = ["v4"] }
